<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edibca.databasemanagement.UserInsert">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:elevation="2dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/name"
                android:id="@+id/textView2" />



            <EditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/name"
                android:lines="1"
                android:inputType="textPersonName"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/last_name"
                android:id="@+id/textView3" />

            <EditText
                android:id="@+id/textLastName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPersonName"
                android:hint="@string/last_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/email"
                android:id="@+id/textView4" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/telephone"
                android:id="@+id/textView5" />

            <EditText
                android:id="@+id/textTelephone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/telephone"
                android:inputType="phone"
                />

            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/selectionImage"/>
            <ImageView
                android:id="@+id/btnGallery"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_gallery"
                />




        </LinearLayout>
    </ScrollView>

</RelativeLayout>
